squishing fix

--- a/about.css
+++ b/about.css
@@ -202,6 +202,17 @@ section:nth-of-type(5) {
     padding-right: 10px;
 }
 
+@media (max-width: 1400px) {
+    .facts{
+        width: 90%;
+        grid-template-columns: 60% 40%;
+    }
+    .facts>.left {
+        display: grid;
+        grid-template-columns: 50% 50%;
+    }
+}
+
 @media (max-width: 1200px) {
     #photos {
         -moz-column-count: 4;
